# adk-gradio

./: README.md
adk-gradio-example/: app.py  main.py  pyproject.toml
adk-gradio-example/adk_gradio_example/: adk_simple_client.py
adk-gradio-example/adk_gradio_example/adk_agents/weather_agent/: agent.py
gradio-custom-components/agent-inspector/: README.md  pyproject.toml
gradio-custom-components/agent-inspector/demo/: app.py  space.py
gradio-custom-components/agent-inspector/demo/event-trace/: trace-klukBNGZ.json
gradio-custom-components/agent-inspector/demo/session-sample/: value-0.json  value-1.json  value-2.json
gradio-custom-components/agent-inspector/frontend/: package-lock.json
